tests/ucc/type/good/enum-1.c
typedef enum test
{
    LOL = 1
} type;

int main(void)
{
    type test = LOL;
    return test;
}
