tests/ucc/type/bad/fun-lvalue.c
int f(int a)
{
    return a;
}

int main(void)
{
    int c;

    f(c) = 1;

    return c;
}
